--- a/package.json
+++ b/package.json
@@ -9,15 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formspree/react": "^2.5.1",
+    "fslightbox-react": "^1.7.6",
+    "lightbox.js-react": "^1.0.0",
+    "lightgallery": "^2.7.2",
+    "next": "14.1.0",
+    "next-gallery": "^2.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-image-list-box": "^0.1.2",
+    "react-lightbox-component": "^1.2.1",
+    "react-photo-album": "^2.3.1",
+    "react-responsive-carousel": "^3.2.23",
+    "react-spring-lightbox": "^1.8.0",
+    "yet-another-react-lightbox": "^3.17.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0"
   }
 }
