--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@formspree/react": "^2.5.1",
+    "decap-cms-app": "^3.1.1",
     "fslightbox-react": "^1.7.6",
     "lightbox.js-react": "^1.0.0",
     "lightgallery": "^2.7.2",
@@ -22,6 +23,7 @@
     "react-photo-album": "^2.3.1",
     "react-responsive-carousel": "^3.2.23",
     "react-spring-lightbox": "^1.8.0",
+    "sharp": "^0.33.2",
     "yet-another-react-lightbox": "^3.17.0"
   },
   "devDependencies": {
