--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "fslightbox-react": "^1.7.6",
     "lightbox.js-react": "^1.0.0",
     "lightgallery": "^2.7.2",
+    "netlify-cms-media-library-cloudinary": "^1.3.10",
     "next": "14.1.0",
     "next-gallery": "^2.1.0",
     "react": "^18",
