--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "yet-another-react-lightbox": "^3.17.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "frontmatter-markdown-loader": "^3.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
   }
