--- a/phographe-cms-project/public/admin/config.yml
+++ b/phographe-cms-project/public/admin/config.yml
@@ -4,12 +4,14 @@ backend:
   # This line should *not* be indented
 media_folder: "images/uploads" # Media files will be stored in the repo under images/uploads
 # These lines should *not* be indented
-media_folder: "p/ublic/images/uploads" # Media files will be stored in the repo under static/images/uploads
-public_folder: "/images/uploads" # The src attribute for uploaded media will begin with
+media_folder: "/public/images" # Media files will be stored in the repo under static/images/uploads
+public_folder: "/images" # The src attribute for uploaded media will begin with
+
+
 collections:
-  - name: "blog" # Used in routes, e.g., /admin/collections/blog
+  - name: "Galerie" # Used in routes, e.g., /admin/collections/blog
     label: "Blog" # Used in the UI
-    folder: "_posts/blog" # The path to the folder where the documents are stored
+    folder: "Galerie/galerie" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
