--- a/phographe-cms-project/public/admin/config.yml
+++ b/phographe-cms-project/public/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: git-gateway
   branch: main # Branch to update (optional; defaults to master)
   # This line should *not* be indented
-media_folder: "images/uploads" # Media files will be stored in the repo under images/uploads
+media_folder: "/images" # Media files will be stored in the repo under images/uploads
 # These lines should *not* be indented
 media_folder: "/public/images" # Media files will be stored in the repo under static/images/uploads
 public_folder: "/images" # The src attribute for uploaded media will begin with
